# ExoBuilds

./: .gitignore  Dockerfile  docker-compose.yml
app/: .crates.toml  .crates2.json  .env.example  Cargo.toml
app/public/champions/css/: style.css
app/public/css/: style.css
app/public/js/: champion.js  search.js
app/public/profile/css/: style.css
app/src/: champion_parser.rs  database.rs  main.rs  matches_parser.rs  settings.rs  utils.rs
app/src/models/: champion_model.rs  data_model.rs  match_history_model.rs  match_model.rs  mod.rs  profile_model.rs  recommended_champion_model.rs
app/templates/: champions.html.tera  errorprofile.html.tera  index.html.tera  profile.html.tera
