[package]
name = "exobuilds-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
dotenv = "0.15.0"
serde = "1.0.137"
urlencoding = "2.1.0"

[dependencies.ureq]
version = "2.4.0"
features = ["json"]

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
